config/home/gke_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-internal-ingress
  # Global External Application Load Balancer (Default) none
  annotations:
    kubernetes.io/ingress.class: "gce-internal"   # Internal Application Load Balancer (VPC-only)
    # regional external
    # networking.gke.io/load-balancer-type: "External"
    # kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: my-internal-service
      port:
        number: 8080
